--- a/style/index.css
+++ b/style/index.css
@@ -4,46 +4,196 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* End of reset */
+
+* {
+  outline: 1px solid red;
+  outline-offset: -1px;
+}
+
+body {
+  font-size: 40px;
+  max-width:100%;
+}
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.topsection {
+  border: 4px solid black;
+  width: 90%;
+  height: 500px;
+  margin: 2%;
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  background-image: url(https://images.freeimages.com/images/large-previews/b3d/flowers-1375316.jpg);
+}
+.name {
+  margin: 10% 10% 0 10%;
+  height: 300px;
+  border: 4px solid black;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  text-align: center;
+}
+
+.bottomsection{
+    max-width:100%;
+    margin:20px;
+    display:flex;
+
+}
+
+.gallery{
+  font-size: medium;
+  text-align: center;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;   
+}
+.gallery div {
+  height: 100px;
+  width: 30%;
+  margin:6px;
+}
+
+img{
+    width: 100%;
+}
+footer{
+  position:fixed;
+  bottom:0;
+  width:100%;
+  display: flex;
+
 }
