--- a/style/index.css
+++ b/style/index.css
@@ -137,13 +137,17 @@ table {
 }
 
 body {
-  font-size: 40px;
-  max-width:100%;
+  font-size: 20px;
+  max-width: 100%;
 }
 header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+button{
+  height: 60px;
+  width: 120px;
 }
 .topsection {
   border: 4px solid black;
@@ -165,35 +169,23 @@ header {
   text-align: center;
 }
 
-.bottomsection{
-    max-width:100%;
-    margin:20px;
-    display:flex;
-
-}
-
-.gallery{
-  font-size: medium;
-  text-align: center;
-    height: 100px;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;   
-}
-.gallery div {
-  height: 100px;
-  width: 30%;
-  margin:6px;
-}
-
-img{
-    width: 100%;
-}
-footer{
-  position:fixed;
-  bottom:0;
-  width:100%;
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   display: flex;
+}
+.bottomsection{
+  width: 100%;
 
+}
+.gallery{
+  width:100%;
+}
+div.gallery{
+  width:100%;
+  display:flex;
+  flex-wrap:wrap;
+  flex-direction: row;
+  justify-content: space-between;
 }
