--- a/style/index.css
+++ b/style/index.css
@@ -131,14 +131,17 @@ table {
 
 /* End of reset */
 
-* {
+/* * {
   outline: 1px solid red;
   outline-offset: -1px;
+} */
+img{
+  width:100%;
 }
-
 body {
   font-size: 20px;
   max-width: 100%;
+  font-family: 'Piazzolla', serif;
 }
 header {
   display: flex;
@@ -150,7 +153,6 @@ button{
   width: 120px;
 }
 .topsection {
-  border: 4px solid black;
   width: 90%;
   height: 500px;
   margin: 2%;
@@ -162,19 +164,13 @@ button{
 .name {
   margin: 10% 10% 0 10%;
   height: 300px;
-  border: 4px solid black;
   display: flex;
   flex-direction: column;
   align-content: flex-end;
   text-align: center;
 }
 
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  display: flex;
-}
+
 .bottomsection{
   width: 100%;
 
@@ -182,10 +178,18 @@ footer {
 .gallery{
   width:100%;
 }
+
 div.gallery{
   width:100%;
   display:flex;
   flex-wrap:wrap;
   flex-direction: row;
   justify-content: space-between;
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  margin:10px;
 }
